# programming-question-generator

./: .gitignore  README.md
back-end/: .dockerignore  Dockerfile  pyproject.toml  testVector.py  testjudge0.py  testjudge01.py  testpy.py
back-end/exam/: models.py  serializers.py  urls.py  views.py
back-end/exam/migrations/: 0001_initial.py  0002_exam_difficulty.py  0003_exam_completed_at.py
back-end/generator/: automatic_validation.py  automatic_validation_old.py  coding_validator.py  evaluate_question_answer.py  judge0_file.py  mcq_validator.py  models.py  question_generation_for_exam.py  sandbox.py  services.py  short_answer_validator.py  urls.py  validate_answer_question_for_exam.py  views.py
back-end/generator/migrations/: 0001_initial.py  0002_programmingquestion_user_id.py  0003_programmingquestion_allocated_marks_and_more.py  0004_programmingquestion_answered.py  0005_programmingquestion_answer_feedback_and_more.py
back-end/project/: settings.py  urls.py
back-end/user/: models.py  serializers.py  urls.py  views.py
back-end/user/migrations/: 0001_initial.py  0002_user_average.py  0003_userdifficulty_delete_user.py  0004_userdifficulty_adaptability.py
front-end/: .gitignore  README.md  middleware.ts  package-lock.json  package.json  vite.config.js
front-end/actions/: results.ts  user.ts
front-end/app/: globals.css  layout.tsx
front-end/constants/: index.ts
front-end/context/: AuthContext.tsx
front-end/src/: App.jsx  Footer.jsx  Footer.module.css  Header.jsx  (+1 more)
preprocess/: .gitignore  README.md  main.py  random_retrieval.py  requirements.txt
(+48 files in other folders)
