[tool.poetry]
name = "programming-question-generator-back-end"
version = "0.1.0"
description = "Back end for programming question generator"
authors = ["SajidAhmed0 <mjsahmed205@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
